--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: A great collection of free and premium themes and templates.
     
     <div class="card-columns">        
         {% for post in paginator.posts %}
-            <!-- {% include card-post.html %} -->
+            {% include card-post.html %}
         {% endfor %}            
     </div>
 
