--- a/_pages/flash.html
+++ b/_pages/flash.html
@@ -1,5 +1,6 @@
 ---
 title: Pintereso Free Jekyll Theme
+permalink: "/flash.html"
 layout: default
 description: A great collection of free and premium themes and templates.
 ---
