--- a/_pages/oneanddone.html
+++ b/_pages/oneanddone.html
@@ -1,5 +1,6 @@
 ---
 title: Pintereso Free Jekyll Theme
+permalink: "/oneanddone.html"
 layout: default
 description: A great collection of free and premium themes and templates.
 ---
