--- a/_pages/flash.html
+++ b/_pages/flash.html
@@ -9,7 +9,7 @@ description: A great collection of free and premium themes and templates.
     
     <div class="card-columns">        
         {% for post in paginator.posts %}
-        {% if post.categories contains "cool" %}
+        {% if post.categories contains "flash" %}
             {% include card-post.html %}
         {% endif %}    
         {% endfor %}            
