--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@ description: A great collection of free and premium themes and templates.
     
     <div class="card-columns">        
         {% for post in paginator.posts %}
+        {% if post.categories contains "flash" %}
             {% include card-post.html %}
-        {% endfor %}            
+        {% endif %}    
+        {% endfor %}                
     </div>
 
     <div class="row justify-content-center mt-5">
