--- a/_pages/flash/index.html
+++ b/_pages/flash/index.html
@@ -1,6 +1,6 @@
 ---
 title: Pintereso Free Jekyll Theme
-permalink: "/flash.html"
+permalink: "/flash/index.html"
 layout: default
 description: A great collection of free and premium themes and templates.
 ---
