--- a/_pages/flash.html
+++ b/_pages/flash.html
@@ -1,5 +1,6 @@
 ---
 title: Pintereso Free Jekyll Theme
+permalink: "/flash.html"
 layout: default
 description: A great collection of free and premium themes and templates.
 ---
@@ -7,39 +8,23 @@ description: A great collection of free and premium themes and templates.
 <div class="container-fluid">
     
     <div class="card-columns">        
-        {% for post in paginator.posts %}
-            {% include card-post.html %}
-        {% endfor %}                
-    </div>
-
-    <div class="row justify-content-center mt-5">
-     <!-- Pagination links -->
-        {% if paginator.total_pages > 1 %}
-        <div class="pagination"> 
-          {% if paginator.previous_page %}
-            <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
-          {% else %}
-            <span class="prev">&laquo; Prev</span>
-          {% endif %}
-
-          {% for page in (1..paginator.total_pages) %}
-            {% if page == paginator.page %}
-              <span class="webjeda">{{ page }}</span>
-            {% elsif page == 1 %}
-              <a href="{{site.baseurl}}/">{{ page }}</a>
-            {% else %}
-              <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+      {% for category in site.categories %}
+      {% assign pages_list = category[1] %}
+      {% for post in pages_list %}
+        
+        {% if post.title != null %}
+            {% if group == null or group == post.group %}
+              {% if post.categories contains "flash" %}
+                {% include card-post.html %}
+              {% endif %}
             {% endif %}
-          {% endfor %}
-
-          {% if paginator.next_page %}
-            <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
-          {% else %}
-            <span class="next">Next &raquo;</span>
-          {% endif %}
-        </div>
-        {% endif %}      
+        {% endif %}
+      {% endfor %}
+      {% assign pages_list = nil %}
+      {% assign group = nil %}
+      {% endfor %}            
     </div>
+
 
 </div>    
   
