--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: A great collection of free and premium themes and templates.
 
 <div class="container-fluid">
     
-    <div class="card-columns">        
+    <div class="card-columns app">        
         {% for post in paginator.posts %}
             {% include card-post.html %}
         {% endfor %}                
