--- a/_pages/flash.html
+++ b/_pages/flash.html
@@ -7,7 +7,7 @@ description: A great collection of free and premium themes and templates.
 
 <div class="container-fluid">
     
-    <div class="card-columns">        
+    <div class="card-columns app">        
       {% for category in site.categories %}
       {% assign pages_list = category[1] %}
       {% for post in pages_list %}
