--- a/_pages/oneanddone.html
+++ b/_pages/oneanddone.html
@@ -9,7 +9,7 @@ description: A great collection of free and premium themes and templates.
 
 <h2>Available</h2>  
   
-  <div class="card-columns">        
+  <div class="card-columns app">        
     {% for category in site.categories %}
     {% assign pages_list = category[1] %}
     {% for post in pages_list %}
@@ -29,7 +29,7 @@ description: A great collection of free and premium themes and templates.
 
 <h2>Taken</h2>  
 
-  <div class="card-columns">        
+  <div class="card-columns app">        
     {% for category in site.categories %}
     {% assign pages_list = category[1] %}
     {% for post in pages_list %}
