--- a/_pages/oneanddone.html
+++ b/_pages/oneanddone.html
@@ -16,7 +16,7 @@ description: A great collection of free and premium themes and templates.
       
       {% if post.title != null %}
           {% if group == null or group == post.group %}
-            {% if post.categories contains "oneanddone,taken" %}
+            {% if post.categories contains "oneanddone" %}
               {% include card-post.html %}
             {% endif %}
           {% endif %}
