--- a/_pages/oneanddone.html
+++ b/_pages/oneanddone.html
@@ -7,7 +7,8 @@ description: A great collection of free and premium themes and templates.
 
 <div class="container-fluid">
 
-<h2>Available</h2>  
+<h4>Available</h4>  
+<p>Here are some available designs. Once they are tattooed, they are gone forever.</p>
   
   <div class="card-columns app">        
     {% for category in site.categories %}
@@ -27,7 +28,7 @@ description: A great collection of free and premium themes and templates.
     {% endfor %}            
   </div>
 
-<h2>Taken</h2>  
+<h4>Taken</h4>  
 
   <div class="card-columns app taken">        
     {% for category in site.categories %}
