--- a/_pages/oneanddone.html
+++ b/_pages/oneanddone.html
@@ -7,8 +7,10 @@ description: A great collection of free and premium themes and templates.
 
 <div class="container-fluid">
 
-<h4>Available</h4>  
-<p>Here are some available designs. Once they are tattooed, they are gone forever.</p>
+<div style="text-align: center;">
+    <h2>Available</h2>
+    <p>Here are some available designs. Once they are tattooed, they are gone forever.</p>
+</div>
   
   <div class="card-columns app">        
     {% for category in site.categories %}
@@ -28,7 +30,9 @@ description: A great collection of free and premium themes and templates.
     {% endfor %}            
   </div>
 
-<h4>Taken</h4>  
+<div style="text-align: center;">
+    <h2>Taken</h2>
+</div> 
 
   <div class="card-columns app taken">        
     {% for category in site.categories %}
