--- a/index.html
+++ b/index.html
@@ -5,7 +5,46 @@ description: A great collection of free and premium themes and templates.
 ---
 
 <div class="container-fluid">
-    
+
+    <!-- Two 2-column sections -->
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Section 1</h2>
+            <p>Content for the first section goes here.</p>
+        </div>
+        <div class="col-md-6">
+            <h2>Section 2</h2>
+            <p>Content for the second section goes here.</p>
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <h2>Section 3</h2>
+            <p>Content for the third section goes here.</p>
+        </div>
+        <div class="col-md-6">
+            <h2>Section 4</h2>
+            <p>Content for the fourth section goes here.</p>
+        </div>
+    </div>
+
+    <!-- Latest Post Images by Tag -->
+    <div class="row mt-5">
+        {% assign tags = "Flash,oneanddone,work" | split: "," %}
+        {% for tag in tags %}
+            {% assign latest_post = site.posts | where: "tags", tag | first %}
+            {% if latest_post %}
+                <div class="col-md-4">
+                    <h3>{{ tag }}</h3>
+                    <a href="{{ latest_post.url }}">
+                        <img src="{{ latest_post.image }}" alt="{{ latest_post.title }}" class="img-fluid">
+                    </a>
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
+
     <div class="card-columns app">        
         {% for post in paginator.posts %}
             {% include card-post.html %}
@@ -40,7 +79,5 @@ description: A great collection of free and premium themes and templates.
         </div>
         {% endif %}      
     </div>
-
 </div>    
-  
 </section>
