--- a/index.html
+++ b/index.html
@@ -5,44 +5,42 @@ description: A great collection of free and premium themes and templates.
 ---
 
 <div class="container-fluid">
-
-    <!-- Two 2-column sections -->
-    <div class="row">
-        <div class="col-md-6">
-            <h2>Section 1</h2>
-            <p>Content for the first section goes here.</p>
-        </div>
-        <div class="col-md-6">
-            <h2>Section 2</h2>
-            <p>Content for the second section goes here.</p>
-        </div>
+    
+    <div class="card-columns app">        
+        {% for post in paginator.posts %}
+            {% include card-post.html %}
+        {% endfor %}                
     </div>
 
-    <div class="row mt-4">
-        <div class="col-md-6">
-            <h2>Section 3</h2>
-            <p>Content for the third section goes here.</p>
-        </div>
-        <div class="col-md-6">
-            <h2>Section 4</h2>
-            <p>Content for the fourth section goes here.</p>
-        </div>
-    </div>
+    <div class="row justify-content-center mt-5">
+     <!-- Pagination links -->
+        {% if paginator.total_pages > 1 %}
+        <div class="pagination"> 
+          {% if paginator.previous_page %}
+            <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
+          {% else %}
+            <span class="prev">&laquo; Prev</span>
+          {% endif %}
 
-    <!-- Latest Post Images by Tag in 3 Columns -->
-    <div class="row mt-5">
-        {% assign tags = "Flash,oneanddone,work" | split: "," %}
-        {% for tag in tags %}
-            {% assign latest_post = site.posts | where: "tags", tag | first %}
-            {% if latest_post %}
-                <div class="col-md-4">
-                    <h3>{{ tag }}</h3>
-                    <a href="{{ latest_post.url }}">
-                        <img src="{{ latest_post.image }}" alt="{{ latest_post.title }}" class="img-fluid">
-                    </a>
-                </div>
+          {% for page in (1..paginator.total_pages) %}
+            {% if page == paginator.page %}
+              <span class="webjeda">{{ page }}</span>
+            {% elsif page == 1 %}
+              <a href="{{site.baseurl}}/">{{ page }}</a>
+            {% else %}
+              <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
             {% endif %}
-        {% endfor %}
+          {% endfor %}
+
+          {% if paginator.next_page %}
+            <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
+          {% else %}
+            <span class="next">Next &raquo;</span>
+          {% endif %}
+        </div>
+        {% endif %}      
     </div>
+
 </div>    
+  
 </section>
