--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 description: A great collection of free and premium themes and templates.
 ---
 
-<div class="container-fluid">
+<div class="container">
     
     <div class="card-columns app">        
         {% for post in paginator.posts %}
