--- a/_pages/flash.html
+++ b/_pages/flash.html
@@ -5,7 +5,7 @@ layout: default
 description: A great collection of free and premium themes and templates.
 ---
 
-<div class="container-fluid">
+<div class="container">
     
     <div class="card-columns app">        
       {% for category in site.categories %}
