--- a/_pages/oneanddone.html
+++ b/_pages/oneanddone.html
@@ -5,7 +5,7 @@ layout: default
 description: A great collection of free and premium themes and templates.
 ---
 
-<div class="container-fluid">
+<div class="container">
 
 <div style="text-align: center;">
     <h2>Available</h2>
