--- a/_pages/one_and_done.html
+++ b/_pages/one_and_done.html
@@ -1,6 +1,6 @@
 ---
 title: Pintereso Free Jekyll Theme
-permalink: "/oneanddone"
+permalink: "/one_and_done"
 layout: default
 description: A great collection of free and premium themes and templates.
 ---
@@ -19,7 +19,7 @@ description: A great collection of free and premium themes and templates.
       
       {% if post.title != null %}
           {% if group == null or group == post.group %}
-            {% if post.categories contains "oneanddone" %}
+            {% if post.categories contains "one_and_done" %}
               {% include card-post.html %}
             {% endif %}
           {% endif %}
