--- a/_pages/flash.html
+++ b/_pages/flash.html
@@ -1,8 +1,8 @@
 ---
-title: Pintereso Free Jekyll Theme
+title: Available Flash Tattoos
 permalink: "/flash"
 layout: default
-description: A great collection of free and premium themes and templates.
+description: A collection of Morgan's current flash.
 ---
 
 <div class="container">
