--- a/_pages/one_and_done.html
+++ b/_pages/one_and_done.html
@@ -1,15 +1,15 @@
 ---
-title: Pintereso Free Jekyll Theme
+title: One & Done Tattoo Designs
 permalink: "/one_and_done"
 layout: default
-description: A great collection of free and premium themes and templates.
+description: Morgan's current selection of available designs.
 ---
 
 <div class="container">
 
 <div style="text-align: center;">
     <h2>Available</h2>
-    <p>Here are some available designs. Once they are tattooed, they are gone forever.</p>
+    <p>Here are some available designs. Once someone gets it, it's gone forever.</p>
 </div>
   
   <div class="card-columns app">        
