--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
-title: Pintereso Free Jekyll Theme
+title: Morgan Diann Tattoo
 layout: default
-description: A great collection of free and premium themes and templates.
+description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stamp-style tattoos that make a statement.
 ---
 
 <div class="container">
