--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
 ---
 
 <div class="container">
+
+  <img src="/assets/images/morgan.jpeg" alt="Morgan Diann" width="100%">
     
     <div class="card-columns app">        
         {% for post in paginator.posts %}
