--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
 
 <div class="container">
 
-  <img src="/assets/images/morgan.jpeg" alt="Morgan Diann" width="100%" style="padding-bottom: 20px;">
+  <img src="/assets/images/morgan.jpeg" alt="Morgan Diann" width="100%" style="padding-bottom: 20px; border-radius: calc(1rem - 1px);">
     
     <div class="card-columns app">        
         {% for post in paginator.posts %}
