--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
 
 <div class="container">
 
-  <img src="/assets/images/morgan.jpeg" alt="Morgan Diann" width="100%" style="border-radius: calc(1rem - 1px); margin-bottom: 20px;" class="d-none d-sm-block">
-  <img src="/assets/images/morgan2.jpeg" alt="Morgan Diann" width="100%" style="border-radius: calc(1rem - 1px); margin-bottom: 20px;" class="d-block d-sm-none d-sm-block d-md-none">
+  <img src="/assets/images/morgan.jpeg" alt="Morgan Diann" width="100%" style="border-radius: calc(1rem - 1px); margin-bottom: 20px;">
     
     <div class="card-columns app">        
         {% for post in paginator.posts %}
