--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
 
   <img src="/assets/images/morgan.jpeg" alt="Morgan Diann" width="100%" style="border-radius: calc(1rem - 1px); margin-bottom: 20px;">
   
-    <!-- New section for three columns -->
-    <div class="row">
-      <div class="col-md-4">
-        <h3>Flash</h3>
-        {% assign flash_post = site.posts | where: "tags", "flash" | first %}
-        {% if flash_post %}
-          <img src="{{ flash_post.image }}" alt="{{ flash_post.title }}" class="img-fluid">
-        {% endif %}
-      </div>
-      <div class="col-md-4">
-        <h3>One and Done</h3>
-        {% assign oneanddone_post = site.posts | where: "tags", "oneanddone" | first %}
-        {% if oneanddone_post %}
-          <img src="{{ oneanddone_post.image }}" alt="{{ oneanddone_post.title }}" class="img-fluid">
-        {% endif %}
-      </div>
-      <div class="col-md-4">
-        <h3>Work</h3>
-        {% assign work_post = site.posts | where: "tags", "work" | first %}
-        {% if work_post %}
-          <img src="{{ work_post.image }}" alt="{{ work_post.title }}" class="img-fluid">
-        {% endif %}
-      </div>
+  <!-- New section for three columns -->
+  <div class="row">
+    <div class="col-md-4">
+      <h3>Flash</h3>
+      {% assign flash_post = site.posts | where: "categories", "flash" | first %}
+      {% if flash_post %}
+        <img src="{{ flash_post.image }}" alt="{{ flash_post.title }}" class="img-fluid">
+      {% endif %}
     </div>
+    <div class="col-md-4">
+      <h3>One and Done</h3>
+      {% assign oneanddone_post = site.posts | where: "categories", "oneanddone" | first %}
+      {% if oneanddone_post %}
+        <img src="{{ oneanddone_post.image }}" alt="{{ oneanddone_post.title }}" class="img-fluid">
+      {% endif %}
+    </div>
+    <div class="col-md-4">
+      <h3>Work</h3>
+      {% assign work_post = site.posts | where: "categories", "work" | first %}
+      {% if work_post %}
+        <img src="{{ work_post.image }}" alt="{{ work_post.title }}" class="img-fluid">
+      {% endif %}
+    </div>
+  </div>
 
     <div class="card-columns app">        
         {% for post in paginator.posts %}
