--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
     <div class="col-md-4 text-center" style="margin-bottom: 20px;">
       {% assign flash_post = site.posts | where: "categories", "flash" | first %}
       {% if flash_post %}
-        <a href="/flash"></a>
+        <a href="/flash">
           <img src="{{ flash_post.image }}" alt="{{ flash_post.title }}" class="img-fluid" style="border-radius: calc(1rem - 1px); margin-bottom: 10px;">
           <h3>Flash</h3>
           <p>Praesent dapibus luctus mi, ac pulvinar justo vestibulum vel. Sed eget quam a magna tempor pellentesque. Aliquam vel lobortis dui, sit amet scelerisque tortor. Nunc purus sem, pharetra non placerat a, sollicitudin et est. Etiam non ipsum ut sem elementum viverra. Curabitur et sagittis sapien, vel lobortis libero. Mauris luctus justo nisi, ut suscipit felis fringilla id.</p>
@@ -41,11 +41,5 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
       {% endif %}
     </div>
   </div>
-      {% endif %}
-    </div>
-  </div>
-      {% endif %}
-    </div>
-  </div>
+
 </div>    
-  </section>
