--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
         <a href="/flash">
           <img src="{{ flash_post.image }}" alt="{{ flash_post.title }}" class="img-fluid" style="border-radius: calc(1rem - 1px); margin-bottom: 10px;">
           <h3>Flash</h3>
-          <p style="text-align: left;">Praesent dapibus luctus mi, ac pulvinar justo vestibulum vel. Sed eget quam a magna tempor pellentesque. Aliquam vel lobortis dui, sit amet scelerisque tortor. Nunc purus sem, pharetra non placerat a, sollicitudin et est. Etiam non ipsum ut sem elementum viverra. Curabitur et sagittis sapien, vel lobortis libero. Mauris luctus justo nisi, ut suscipit felis fringilla id.</p>
+          <p style="text-align: left;">A selection of bold, minimalist designs that can be tattooed multiple times. Perfect for those who love timeless, repeatable art.</p>
         </a>
       {% endif %}
     </div>
@@ -26,7 +26,7 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
         <a href="/one_and_done">
           <img src="{{ oneanddone_post.image }}" alt="{{ oneanddone_post.title }}" class="img-fluid" style="border-radius: calc(1rem - 1px); margin-bottom: 10px;">
           <h3>One & Done</h3>
-          <p style="text-align: left;">Praesent dapibus luctus mi, ac pulvinar justo vestibulum vel. Sed eget quam a magna tempor pellentesque. Aliquam vel lobortis dui, sit amet scelerisque tortor. Nunc purus sem, pharetra non placerat a, sollicitudin et est. Etiam non ipsum ut sem elementum viverra. Curabitur et sagittis sapien, vel lobortis libero. Mauris luctus justo nisi, ut suscipit felis fringilla id.</p>
+          <p style="text-align: left;">Unique, single-use designs available for one client only. Once tattooed, they won’t be repeated.</p>
         </a>
       {% endif %}
     </div>
@@ -35,8 +35,8 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
       {% if work_post %}
         <a href="/work">
           <img src="{{ work_post.image }}" alt="{{ work_post.title }}" class="img-fluid" style="border-radius: calc(1rem - 1px); margin-bottom: 10px;">
-          <h3>Work</h3>
-          <p style="text-align: left;">Praesent dapibus luctus mi, ac pulvinar justo vestibulum vel. Sed eget quam a magna tempor pellentesque. Aliquam vel lobortis dui, sit amet scelerisque tortor. Nunc purus sem, pharetra non placerat a, sollicitudin et est. Etiam non ipsum ut sem elementum viverra. Curabitur et sagittis sapien, vel lobortis libero. Mauris luctus justo nisi, ut suscipit felis fringilla id.</p>
+          <h3>Previous Work</h3>
+          <p style="text-align: left;">A portfolio of completed tattoos, showcasing Morgan’s signature style and past client pieces.</p>
         </a>
       {% endif %}
     </div>
