--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
 
   <img src="/assets/images/morgan.jpeg" alt="Morgan Diann" width="100%" style="border-radius: calc(1rem - 1px); margin-bottom: 20px;">
   
-  <div class="container text-center" style="max-width: 800px; margin: auto;">
+  <div class="container text-center" style="max-width: 600px; margin: auto;">
     <h1 style="font-weight: bold;">Morgan Diann Tattoo</h1>
     <p style="font-size: 1.2em; font-weight: bold;">Bold. Minimalist. Inclusive.</p>
     
@@ -23,7 +23,7 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
     </p>
     
     <p>
-      📅 <strong><a href="https://form.jotform.com/241105819271149" style="text-decoration: none; color: #8B0000;">Book an Appointment</a></strong> | 📍 <em>Chattanooga, TN</em>
+      📅 <strong><a href="https://form.jotform.com/241105819271149">Book an Appointment</a></strong> | 📍 <em>Chattanooga, TN</em>
     </p>
   </div>
   
