--- a/index.html
+++ b/index.html
@@ -32,30 +32,30 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
     <div class="col-md-4 text-center" style="margin-bottom: 20px;">
       {% assign flash_post = site.posts | where: "categories", "flash" | first %}
       {% if flash_post %}
-        <a href="/flash">
+        <a href="/flash" style="color: white; text-decoration: none;"></a>
           <img src="{{ flash_post.image }}" alt="{{ flash_post.title }}" class="img-fluid" style="border-radius: calc(1rem - 1px); margin-bottom: 10px;">
-          <h3>Flash</h3>
-          <p style="text-align: left;">A selection of bold, minimalist designs that can be tattooed multiple times. Perfect for those who love timeless, repeatable art.</p>
+          <h3 style="color: white;">Flash</h3>
+          <p style="text-align: left; color: white;">A selection of bold, minimalist designs that can be tattooed multiple times. Perfect for those who love timeless, repeatable art.</p>
         </a>
       {% endif %}
     </div>
     <div class="col-md-4 text-center" style="margin-bottom: 20px;">
       {% assign oneanddone_post = site.posts | where: "categories", "one_and_done" | first %}
       {% if oneanddone_post %}
-        <a href="/one_and_done">
+        <a href="/one_and_done" style="color: white; text-decoration: none;"></a>
           <img src="{{ oneanddone_post.image }}" alt="{{ oneanddone_post.title }}" class="img-fluid" style="border-radius: calc(1rem - 1px); margin-bottom: 10px;">
-          <h3>One & Done</h3>
-          <p style="text-align: left;">Unique, single-use designs available for one client only. Once tattooed, they won’t be repeated.</p>
+          <h3 style="color: white;">One & Done</h3>
+          <p style="text-align: left; color: white;">Unique, single-use designs available for one client only. Once tattooed, they won’t be repeated.</p>
         </a>
       {% endif %}
     </div>
     <div class="col-md-4 text-center" style="margin-bottom: 20px;">
       {% assign work_post = site.posts | where: "categories", "work" | first %}
       {% if work_post %}
-        <a href="/work">
+        <a href="/work" style="color: white; text-decoration: none;"></a>
           <img src="{{ work_post.image }}" alt="{{ work_post.title }}" class="img-fluid" style="border-radius: calc(1rem - 1px); margin-bottom: 10px;">
-          <h3>Previous Work</h3>
-          <p style="text-align: left;">A portfolio of completed tattoos, showcasing Morgan’s signature style and past client pieces.</p>
+          <h3 style="color: white;">Previous Work</h3>
+          <p style="text-align: left; color: white;">A portfolio of completed tattoos, showcasing Morgan’s signature style and past client pieces.</p>
         </a>
       {% endif %}
     </div>
