--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ description: A Chattanooga tattoo artist. Specializing in bold, minimalist, stam
     </p>
     
     <p>
-      Whether you’re looking for <a href="/flash"><strong>repeatable flash designs</strong></a>, a <a href="/one_and_done"><strong>one-of-a-kind tattoo</strong></a>,
-      or inspiration from <a href="/work"><strong>previous work</strong></a>, Morgan ensures a seamless and high-quality tattooing experience.
+      Whether you’re looking for <a href="/flash"><strong>repeatable flash designs</strong></a>, a <a href="/one_and_done"><strong>Predesigned one and done tattoo</strong></a>,
+      or get a custom designed tattoo with some inspiration from <a href="/work"><strong>previous work</strong></a>, Morgan ensures a seamless and high-quality tattoo experience.
     </p>
     
     <p>
