--- a/_pages/popups.html
+++ b/_pages/popups.html
@@ -5,7 +5,7 @@ layout: default
 description: Morgan Diann brings her bold, minimalist tattoo style to you with exclusive pop-up tattoo events!
 ---
 <div class="container">
-<img src="/assets/images/morgan3.jpg" alt="Morgan pop-up event" style="width:100%;height:auto;">
+<img src="/assets/images/morgan3.jpg" alt="Morgan pop-up event" width="100%" style="border-radius: calc(1rem - 1px); margin-bottom: 20px;">
 <body>
     <header>
         <h1>Pop-Up Tattoos with Morgan Diann</h1>
