--- a/_pages/popups.html
+++ b/_pages/popups.html
@@ -21,91 +21,49 @@ description: Morgan Diann brings her bold, minimalist tattoo style to you with e
         <p>Each pop-up location is carefully chosen to provide a comfortable space for tattooing, and Morgan prioritizes an inclusive atmosphere where all clients feel valued and respected.</p>
     </section>
 
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "FAQPage",
-        "mainEntity": [
-            {
-                "@type": "Question",
-                "name": "How do I find out about upcoming pop-up events?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Morgan announces all pop-up tattoo events on her Instagram. Be sure to follow her there for updates on dates, locations, and available designs."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "Do I need to make an appointment?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "No appointments—pop-ups are walk-in only! These events fill up quickly, so arriving early is the best way to secure a spot."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "What kind of tattoos are available at pop-ups?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Each pop-up event features a unique selection of flash designs created specifically for that day. If you can’t make it, don’t worry—these designs are added to Morgan’s flash sheet, so you can always book them later."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "How much do pop-up tattoos cost?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Pricing varies depending on the design. All prices are available at the event, so you can decide on the spot."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "What payment methods are accepted?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Morgan accepts cash and Venmo for pop-up tattoos."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "Is there an age requirement?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Yes. Tennessee state law requires that all tattoo clients be at least 18 years old, with no exceptions. A valid ID is required."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "How should I prepare for my tattoo?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "To have the best experience, make sure to: <ul><li>✔ Bring a valid ID</li><li>✔ Get a good night’s sleep</li><li>✔ Eat a meal beforehand</li><li>✔ Avoid alcohol before your appointment</li></ul>"
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "What if I need to cancel or change my mind?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Since pop-ups are first come, first served, there’s no need to cancel. If you decide not to get tattooed, no problem! You can always book the design later as part of Morgan’s regular flash offerings."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "Is Morgan licensed to tattoo in Tennessee?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Yes! Morgan holds the proper licensing required by the state of Tennessee and follows all health and safety regulations. The health department inspects her setup before any tattooing begins, ensuring that all procedures meet the state’s stringent guidelines. You can rest assured that safety and hygiene are her top priorities."
-                }
-            }
-        ]
-    }
-    </script>
+    <section>
+        <h2>FAQ: Pop-Up Tattoos</h2>
+        <dl>
+            <dt>How do I find out about upcoming pop-up events?</dt>
+            <dd>Morgan announces all pop-up tattoo events on her Instagram. Be sure to follow her there for updates on dates, locations, and available designs.</dd>
+
+            <dt>Do I need to make an appointment?</dt>
+            <dd>No appointments—pop-ups are walk-in only! These events fill up quickly, so arriving early is the best way to secure a spot.</dd>
+
+            <dt>What kind of tattoos are available at pop-ups?</dt>
+            <dd>Each pop-up event features a unique selection of flash designs created specifically for that day. If you can’t make it, don’t worry—these designs are added to Morgan’s flash sheet, so you can always book them later.</dd>
+
+            <dt>How much do pop-up tattoos cost?</dt>
+            <dd>Pricing varies depending on the design. All prices are available at the event, so you can decide on the spot.</dd>
+
+            <dt>What payment methods are accepted?</dt>
+            <dd>Morgan accepts cash and Venmo for pop-up tattoos.</dd>
+
+            <dt>Is there an age requirement?</dt>
+            <dd>Yes. Tennessee state law requires that all tattoo clients be at least 18 years old, with no exceptions. A valid ID is required.</dd>
+
+            <dt>How should I prepare for my tattoo?</dt>
+            <dd>To have the best experience, make sure to:
+                <ul>
+                    <li>✔ Bring a valid ID</li>
+                    <li>✔ Get a good night’s sleep</li>
+                    <li>✔ Eat a meal beforehand</li>
+                    <li>✔ Avoid alcohol before your appointment</li>
+                </ul>
+            </dd>
+
+            <dt>What if I need to cancel or change my mind?</dt>
+            <dd>Since pop-ups are first come, first served, there’s no need to cancel. If you decide not to get tattooed, no problem! You can always book the design later as part of Morgan’s regular flash offerings.</dd>
+
+            <dt>Is Morgan licensed to tattoo in Tennessee?</dt>
+            <dd>Yes! Morgan holds the proper licensing required by the state of Tennessee and follows all health and safety regulations. The health department inspects her setup before any tattooing begins, ensuring that all procedures meet the state’s stringent guidelines. You can rest assured that safety and hygiene are her top priorities.</dd>
+        </dl>
+    </section>
 
     <section>
         <h2>Book Her for Your Event</h2>
         <p>Want to bring Morgan’s pop-up tattoo experience to your event or business? Whether it’s a private gathering, art market, or special occasion, Morgan would love to create a memorable experience for your guests.</p>
-        <p><a href="mainlinemorgandiann@gmail.com">Click here to email Morgan and book your event!</a></p>
+        <p><a href="mailto:morgan@morgandiann.com">Click here to email Morgan and book your event!</a></p>
     </section>
 
 </body>
