--- a/_pages/popups.html
+++ b/_pages/popups.html
@@ -6,7 +6,8 @@ description: Morgan Diann brings her bold, minimalist tattoo style to you with e
 ---
 <div class="container">
 <img src="/assets/images/morgan3.jpg" alt="Morgan pop-up event" width="100%" style="border-radius: calc(1rem - 1px); margin-bottom: 20px;">
-<body style="max-width: 800px; margin: auto;"></body>
+<div class="container text-center" style="max-width: 600px; margin: auto;">
+<body>
     <header>
         <h1>Pop-Up Tattoos with Morgan Diann</h1>
     </header>
@@ -23,123 +24,42 @@ description: Morgan Diann brings her bold, minimalist tattoo style to you with e
 
     <section>
         <h2>FAQ: Pop-Up Tattoos</h2>
-        <div class="accordion" id="faqAccordion">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        How do I find out about upcoming pop-up events?
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Morgan announces all pop-up tattoo events on her Instagram. Be sure to follow her there for updates on dates, locations, and available designs.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Do I need to make an appointment?
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        No appointments—pop-ups are walk-in only! These events fill up quickly, so arriving early is the best way to secure a spot.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        What kind of tattoos are available at pop-ups?
-                    </button>
-                </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Each pop-up event features a unique selection of flash designs created specifically for that day. If you can’t make it, don’t worry—these designs are added to Morgan’s flash sheet, so you can always book them later.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFour">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        How much do pop-up tattoos cost?
-                    </button>
-                </h2>
-                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Pricing varies depending on the design. All prices are available at the event, so you can decide on the spot.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFive">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                        What payment methods are accepted?
-                    </button>
-                </h2>
-                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Morgan accepts cash and Venmo for pop-up tattoos.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingSix">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                        Is there an age requirement?
-                    </button>
-                </h2>
-                <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Yes. Tennessee state law requires that all tattoo clients be at least 18 years old, with no exceptions. A valid ID is required.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingSeven">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                        How should I prepare for my tattoo?
-                    </button>
-                </h2>
-                <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        To have the best experience, make sure to:
-                        <ul>
-                            <li>✔ Bring a valid ID</li>
-                            <li>✔ Get a good night’s sleep</li>
-                            <li>✔ Eat a meal beforehand</li>
-                            <li>✔ Avoid alcohol before your appointment</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingEight">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                        What if I need to cancel or change my mind?
-                    </button>
-                </h2>
-                <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Since pop-ups are first come, first served, there’s no need to cancel. If you decide not to get tattooed, no problem! You can always book the design later as part of Morgan’s regular flash offerings.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingNine">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
-                        Is Morgan licensed to tattoo in Tennessee?
-                    </button>
-                </h2>
-                <div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        Yes! Morgan holds the proper licensing required by the state of Tennessee and follows all health and safety regulations. The health department inspects her setup before any tattooing begins, ensuring that all procedures meet the state’s stringent guidelines. You can rest assured that safety and hygiene are her top priorities.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section></div></h2></div></h2></div></h2></div>
+        <dl>
+            <dt>How do I find out about upcoming pop-up events?</dt>
+            <dd>Morgan announces all pop-up tattoo events on her Instagram. Be sure to follow her there for updates on dates, locations, and available designs.</dd>
+
+            <dt>Do I need to make an appointment?</dt>
+            <dd>No appointments—pop-ups are walk-in only! These events fill up quickly, so arriving early is the best way to secure a spot.</dd>
+
+            <dt>What kind of tattoos are available at pop-ups?</dt>
+            <dd>Each pop-up event features a unique selection of flash designs created specifically for that day. If you can’t make it, don’t worry—these designs are added to Morgan’s flash sheet, so you can always book them later.</dd>
+
+            <dt>How much do pop-up tattoos cost?</dt>
+            <dd>Pricing varies depending on the design. All prices are available at the event, so you can decide on the spot.</dd>
+
+            <dt>What payment methods are accepted?</dt>
+            <dd>Morgan accepts cash and Venmo for pop-up tattoos.</dd>
+
+            <dt>Is there an age requirement?</dt>
+            <dd>Yes. Tennessee state law requires that all tattoo clients be at least 18 years old, with no exceptions. A valid ID is required.</dd>
+
+            <dt>How should I prepare for my tattoo?</dt>
+            <dd>To have the best experience, make sure to:
+                <ul>
+                    <li>✔ Bring a valid ID</li>
+                    <li>✔ Get a good night’s sleep</li>
+                    <li>✔ Eat a meal beforehand</li>
+                    <li>✔ Avoid alcohol before your appointment</li>
+                </ul>
+            </dd>
+
+            <dt>What if I need to cancel or change my mind?</dt>
+            <dd>Since pop-ups are first come, first served, there’s no need to cancel. If you decide not to get tattooed, no problem! You can always book the design later as part of Morgan’s regular flash offerings.</dd>
+
+            <dt>Is Morgan licensed to tattoo in Tennessee?</dt>
+            <dd>Yes! Morgan holds the proper licensing required by the state of Tennessee and follows all health and safety regulations. The health department inspects her setup before any tattooing begins, ensuring that all procedures meet the state’s stringent guidelines. You can rest assured that safety and hygiene are her top priorities.</dd>
+        </dl>
+    </section>
 
     <section>
         <h2>Book Her for Your Event</h2>
@@ -148,4 +68,5 @@ description: Morgan Diann brings her bold, minimalist tattoo style to you with e
     </section>
 
 </body>
+</div>
 </div>
