--- a/_pages/popups.html
+++ b/_pages/popups.html
@@ -6,7 +6,7 @@ description: Morgan Diann brings her bold, minimalist tattoo style to you with e
 ---
 <div class="container">
 <img src="/assets/images/morgan3.jpg" alt="Morgan pop-up event" width="100%" style="border-radius: calc(1rem - 1px); margin-bottom: 20px;">
-<div class="container text-center" style="max-width: 600px; margin: auto;">
+<div class="container" style="max-width: 600px; margin: auto;">
 <body>
     <header>
         <h1>Pop-Up Tattoos with Morgan Diann</h1>
