--- a/_pages/popups.html
+++ b/_pages/popups.html
@@ -64,7 +64,7 @@ description: Morgan Diann brings her bold, minimalist tattoo style to you with e
     <section>
         <h2>Book Her for Your Event</h2>
         <p>Want to bring Morgan’s pop-up tattoo experience to your event or business? Whether it’s a private gathering, art market, or special occasion, Morgan would love to create a memorable experience for your guests.</p>
-        <p><a href="mailto:morgan@morgandiann.com">Click here to email Morgan and book your event!</a></p>
+        <p><a href="mainlinemorgandiann@gmail.com">Click here to email Morgan and book your event!</a></p>
     </section>
 
 </body>
